updated buildspec.yml